# trainer

./: .bazelrc  .gitignore  CMakeLists.txt  Cargo.toml  MODULE.bazel  Makefile  README.md
.github/: codecov.yml
.github/workflows/: build.yaml  build.yml
CMake/: gtest.cmake  libutils.cmake
crates/api/: Cargo.toml
crates/api-server-lib/: Cargo.toml
crates/api-server-lib/src/: exercise.rs  lib.rs  settings.rs
crates/api/src/: exercise.rs  lib.rs
crates/api/src/exercise/: api.rs  error.rs  mod.rs  model.rs  repository.rs
crates/sqlite/: Cargo.toml
crates/sqlite/db/migrations/exercises/: 01_exercises.sql
crates/sqlite/src/: lib.rs  sqlx_impl.rs
crates/trainer-tests/: Cargo.toml
crates/trainer-tests/src/: exercise_integration.rs  exercise_manager_tests.rs  lib.rs
include/trainer/api/: exercise.h
src/: BUILD  main.cc
src/lib/: BUILD  my_lib.cc  my_lib.h
test/: CMakeLists.txt
test/trainer/api/: exercise_test.cc
tests/: BUILD  my_lib_test.cc
