[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Gavin Mead <gavin.w.mead@gmail.com>"]
rust-version = "1.81"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gavinmead/trainer"

[workspace.dependencies]
thiserror = "2.0.7"
cargo-tarpaulin = "0.31.3"
rstest = "0.23.0"
tokio = { version = "1.42.0", features = ["rt", "macros"] }
async-trait = "0.1.83"
tracing = "0.1"
test-log = { version = "0.2.16", features = ["color", "trace"] }