[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Gavin Mead <gavin.w.mead@gmail.com>"]
rust-version = "1.81"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gavinmead/trainer"

[workspace.dependencies]
thiserror = "2.0.12"
cargo-tarpaulin = "0.32.7"
rstest = "0.25.0"
tokio = { version = "1.45.1", features = ["rt", "macros"] }
async-trait = "0.1.88"
tracing = "0.1.41"
test-log = { version = "0.2.17", features = ["color", "trace"] }