[package]
name = "api-server-lib"
version = "0.1.0"
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
axum = {workspace = true}
api = {path = "../api"}
sqlite = {path = "../sqlite"}
http-body-util = "0.1.2"
tokio = { workspace = true }
tower = { workspace = true }
