[package]
name = "api"
version = "0.1.0"
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
mockall = "0.13.1"
rstest = {workspace = true}
