[package]
name = "api"
version = "0.1.0"
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true}
tokio = {workspace = true }
tracing = { workspace = true }
log = "0.4.22"

[dev-dependencies]
mockall = "0.13.1"
rstest = {workspace = true}
test-log = {workspace = true}
