[package]
name = "sqlite"
version = "0.1.0"
description = "A SQLite implemention of the repositories for the trainer data model"
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
api = {path = "../api"}
rusqlite = { version = "0.32.0", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.14.0"
rstest = { workspace = true }
rand = "0.8.5"