[package]
name = "sqlite"
version = "0.1.0"
description = "A SQLite implemention of the repositories for the trainer data model"
authors.workspace = true
rust-version.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
api = {path = "../api"}
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
tokio = {workspace = true}
async-trait = {workspace = true}
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.14.0"
rand = "0.8.5"
test-log = {workspace = true}